# aion

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
docs/: HANDOVER.md  SESSION-LEARNINGS.md  migration-workplan.md
docs/analysis/: aion-infra-libs-research.md  aion-integration-libs-research.md  aion-inventory.md  hermes-inventory.md  memory-comparison.md  orchestra-patterns.md
docs/prompts/: agent-improvements.md  cli-hardening.md  handover-post-session7.md  memory-system-port.md  orchestration-handover.md  packaging-init.md  phase0-mcp-tools.md  phase0-structured-output.md  phase1-hooks-mcp-structlog.md  phase2-telegram-gateway.md  self-dogfood.md
src/aion/: __init__.py  agent.py  cli.py  config.py  hooks.py  llm.py  log.py  redact.py  schemas.py
src/aion/gateway/: __init__.py  base.py  config.py  runner.py  session.py
src/aion/gateway/adapters/: slack.py  telegram.py
src/aion/memory/: __init__.py  search.py  sessions.py  store.py
src/aion/tools/: __init__.py  mcp_tools.py  server.py
src/aion/utils/: __init__.py  ansi.py
src/kode/: agent.py  cli.py  config.py
src/kode/memory/: sessions.py
tests/: test_agent.py  test_cli.py  test_gateway.py  test_hooks.py  test_llm.py  test_log.py  test_mcp_config.py  test_mcp_tools.py  test_memory.py  test_redact.py  test_schemas.py  test_search.py  test_sessions.py
