[project]
name = "aion"
version = "0.3.0"
description = "Enterprise-hardened AI agent built on Anthropic's Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "claude-agent-sdk>=0.1.52",
    "anthropic>=0.86.0",
    "aiohttp>=3.13.4",
    "python-telegram-bot>=22.7",
    "slack-bolt>=1.20",
    "slack-sdk>=3.30",
    "pyyaml>=6.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
aion = "aion.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
